# backend/internal/models/device.go
@@ -3,23 +3,25 @@ package models
 import (
 	"time"
 
+	"gorm.io/datatypes"
 	"gorm.io/gorm"
 )
 
 // Device untuk menyimpan data device
 type Device struct {
-	ID          string         `gorm:"type:varchar(50);primaryKey" json:"id"`
-	Name        string         `gorm:"type:varchar(100);not null" json:"name"`
-	Description string         `gorm:"type:text" json:"description"`
-	Status      string         `gorm:"type:varchar(20);default:'active'" json:"status"`
-	LocationID  *uint          `gorm:"index" json:"location_id"`
-	Location    *Location      `gorm:"foreignKey:LocationID" json:"location,omitempty"`
-	Longitude   *float64       `json:"longitude"`
-	Latitude    *float64       `json:"latitude"`
-	Altitude    *float64       `json:"altitude"`
-	CreatedAt   time.Time      `json:"created_at"`
-	UpdatedAt   time.Time      `json:"updated_at"`
-	DeletedAt   gorm.DeletedAt `gorm:"index" json:"deleted_at,omitempty"`
+	ID           string         `gorm:"type:varchar(50);primaryKey" json:"id"`
+	Name         string         `gorm:"type:varchar(100);not null" json:"name"`
+	Description  string         `gorm:"type:text" json:"description"`
+	Status       string         `gorm:"type:varchar(20);default:'installed'" json:"status"`
+	LocationID   *uint          `gorm:"index" json:"location_id"`
+	Location     *Location      `gorm:"foreignKey:LocationID" json:"location,omitempty"`
+	Longitude    *float64       `json:"longitude"`
+	Latitude     *float64       `json:"latitude"`
+	Altitude     *float64       `json:"altitude"`
+	LatestHealth datatypes.JSON `gorm:"type:jsonb" json:"latest_health,omitempty"`
+	CreatedAt    time.Time      `json:"created_at"`
+	UpdatedAt    time.Time      `json:"updated_at"`
+	DeletedAt    gorm.DeletedAt `gorm:"index" json:"deleted_at,omitempty"`
 }
 
 type CreateDeviceResponse struct {
